# TREANT

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_py_decision_tree.py
cmake/: FindNlopt.cmake
data/: test_training_set.txt
include/: Attacker.h  BaggingClassifier.h  Constraint.h  Dataset.h  DecisionTree.h  FeatureColumn.h  Logger.h  Node.h  OptParser.h  SplitOptimizer.h  types.h  utils.h
include/features/: BoolFeatureVector.h  DoubleFeatureVector.h  IFeatureVector.h  IntFeatureVector.h
include/nodes/: BinDoubleNode.h  BinIntNode.h  BooleanNode.h  INode.h  Leaf.h
include/splitters/: DummySplitter.h  ISplitter.h
include/visitors/: GiniVisitor.h  IFeatureVectorVisitor.h  ImpurityVisitor.h
py_decision_tree/: CMakeLists.txt  __init__.py  interface_file_names.cfg  py_decision_tree.h
py_decision_tree/implementation/: c_cpp_interface.cpp  cpp_implementation.cpp  cpp_implementation.hpp
src/: Attacker.cpp  BaggingClassifier.cpp  Constraint.cpp  Dataset.cpp  DecisionTree.cpp  FeatureColumn.cpp  Logger.cpp  Node.cpp  OptParser.cpp  SplitOptimizer.cpp  utils.cpp
src/features/: BoolFeatureVector.cpp  DoubleFeatureVector.cpp  IFeatureVector.cpp  IntFeatureVector.cpp
src/nodes/: BinDoubleNode.cpp  BinIntNode.cpp  BooleanNode.cpp  INode.cpp  Leaf.cpp
src/splitters/: DummySplitter.cpp  ISplitter.cpp
src/visitors/: GiniVisitor.cpp  ImpurityVisitor.cpp
tests/: small_db.txt  test_bagging-classifier.cpp  test_decision_tree.cpp  test_opt_parser.cpp  test_parallel.cpp  test_parallel_dataset.cpp  test_row-pointers-dataset.cpp  test_training-trees-parallel.cpp  test_utils_format.cpp
